tests/baselines/reference/binopAssignmentShouldHaveType.errors.txt
binopAssignmentShouldHaveType.ts(9,8): error TS2322: Type 'null' is not assignable to type 'string'.


==== binopAssignmentShouldHaveType.ts (1 errors) ====
    declare var console;
    "use strict";
    module Test {
     export class Bug {
      getName():string {
       return "name";
      }
      bug() {
       var name:string= null;
           ~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
       if ((name= this.getName()).length > 0) {
        console.log(name);
       }
      }
     }
    }
    
     
    
    